// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<MachinePools /> OpenShift version for machine pools is shown if hypershift 1`] = `
<Fragment>
  <UpdateAllMachinePools />
  <Card
    className="ocm-c-machine-pools__card"
  >
    <CardBody
      className="ocm-c-machine-pools__card--body"
    >
      <ButtonWithTooltip
        className="pf-u-mb-lg"
        disableReason={false}
        id="add-machine-pool"
        onClick={[Function]}
        variant="secondary"
      >
        Add machine pool
      </ButtonWithTooltip>
      <Divider />
      <Table
        actionResolver={[Function]}
        actionsMenuAppendTo="inline"
        areActionsDisabled={[Function]}
        aria-label="Machine pools"
        borders={true}
        canCollapseAll={false}
        canSelectAll={true}
        canSortFavorites={true}
        cells={
          Array [
            Object {
              "cellFormatters": Array [
                [Function],
              ],
              "title": "Machine pool",
            },
            Object {
              "title": "Instance type",
            },
            Object {
              "title": "Availability zones",
              "transforms": Array [
                [Function],
              ],
            },
            Object {
              "title": "Subnets",
            },
            Object {
              "title": "Node count",
            },
            Object {
              "title": "Autoscaling",
              "transforms": Array [
                [Function],
              ],
            },
            Object {
              "title": "Version",
              "transforms": Array [
                [Function],
              ],
            },
          ]
        }
        className=""
        collapseAllAriaLabel=""
        contentId="expanded-content"
        dropdownDirection="down"
        dropdownPosition="right"
        expandId="expandable-toggle"
        gridBreakPoint="grid-md"
        isHeaderSelectDisabled={false}
        isNested={false}
        isStickyHeader={false}
        isTreeTable={false}
        onCollapse={[Function]}
        ouiaSafe={true}
        role="grid"
        rowLabeledBy="simple-node"
        rows={
          Array [
            Object {
              "cells": Array [
                "workers",
                Object {
                  "title": <React.Fragment>
                    m5.xlarge
                  </React.Fragment>,
                },
                "us-east-1b",
                Object {
                  "title": <React.Fragment>
                    <div>
                      subnet-049f90721559000de
                    </div>
                  </React.Fragment>,
                },
                Object {
                  "title": "2",
                },
                "Disabled",
                "4.12.5-candidate",
              ],
              "key": "workers",
              "machinePool": Object {
                "auto_repair": true,
                "availability_zone": "us-east-1b",
                "aws_node_pool": Object {
                  "instance_profile": "staging-21gitfhopbgmmfhlu65v93n4g4n3djde-jknhystj27-worker",
                  "instance_type": "m5.xlarge",
                  "tags": Object {
                    "api.openshift.com/environment": "staging",
                  },
                },
                "href": "/api/clusters_mgmt/v1/clusters/21gitfhopbgmmfhlu65v93n4g4n3djde/node_pools/workers",
                "id": "workers",
                "kind": "NodePool",
                "replicas": 2,
                "status": Object {
                  "current_replicas": 2,
                },
                "subnet": "subnet-049f90721559000de",
                "version": Object {
                  "href": "/api/clusters_mgmt/v1/versions/openshift-v4.12.5-candidate",
                  "id": "openshift-v4.12.5-candidate",
                  "kind": "VersionLink",
                },
              },
            },
          ]
        }
        selectVariant="checkbox"
        variant={null}
      >
        <TableHeader />
        <TableBody />
      </Table>
    </CardBody>
  </Card>
</Fragment>
`;

exports[`<MachinePools /> renders with a machine pool with autoscaling enabled 1`] = `
<Fragment>
  <UpdateAllMachinePools />
  <Card
    className="ocm-c-machine-pools__card"
  >
    <CardBody
      className="ocm-c-machine-pools__card--body"
    >
      <ButtonWithTooltip
        className="pf-u-mb-lg"
        disableReason={false}
        id="add-machine-pool"
        onClick={[Function]}
        variant="secondary"
      >
        Add machine pool
      </ButtonWithTooltip>
      <Divider />
      <Table
        actionResolver={[Function]}
        actionsMenuAppendTo="inline"
        areActionsDisabled={[Function]}
        aria-label="Machine pools"
        borders={true}
        canCollapseAll={false}
        canSelectAll={true}
        canSortFavorites={true}
        cells={
          Array [
            Object {
              "cellFormatters": Array [
                [Function],
              ],
              "title": "Machine pool",
            },
            Object {
              "title": "Instance type",
            },
            Object {
              "title": "Availability zones",
              "transforms": Array [
                [Function],
              ],
            },
            Object {
              "title": "Node count",
            },
            Object {
              "title": "Autoscaling",
              "transforms": Array [
                [Function],
              ],
            },
          ]
        }
        className=""
        collapseAllAriaLabel=""
        contentId="expanded-content"
        dropdownDirection="down"
        dropdownPosition="right"
        expandId="expandable-toggle"
        gridBreakPoint="grid-md"
        isHeaderSelectDisabled={false}
        isNested={false}
        isStickyHeader={false}
        isTreeTable={false}
        onCollapse={[Function]}
        ouiaSafe={true}
        role="grid"
        rowLabeledBy="simple-node"
        rows={
          Array [
            Object {
              "cells": Array [
                "some-id",
                Object {
                  "title": <React.Fragment>
                    m5.xlarge
                  </React.Fragment>,
                },
                "us-east-1",
                Object {
                  "title": "1",
                },
                "Disabled",
              ],
              "key": "some-id",
              "machinePool": Object {
                "availability_zones": Array [
                  "us-east-1",
                ],
                "desired": 1,
                "id": "some-id",
                "instance_type": "m5.xlarge",
              },
            },
            Object {
              "cells": Array [
                "mp-autoscaling",
                Object {
                  "title": <React.Fragment>
                    m5.xlarge
                  </React.Fragment>,
                },
                "us-east-1a",
                Object {
                  "title": "Min: 1, Max: 2",
                },
                "Enabled",
              ],
              "isOpen": false,
              "key": "mp-autoscaling",
              "machinePool": Object {
                "autoscaling": Object {
                  "max_replicas": 2,
                  "min_replicas": 1,
                },
                "availability_zones": Array [
                  "us-east-1a",
                ],
                "href": "/api/clusters_mgmt/v1/clusters/cluster-id/machine_pools/mp-autoscaling",
                "id": "mp-autoscaling",
                "instance_type": "m5.xlarge",
                "kind": "MachinePool",
                "labels": Object {
                  "foo": "bar",
                },
                "taints": Array [
                  Object {
                    "effect": "NoSchedule",
                    "key": "foo1",
                    "value": "bazz1",
                  },
                  Object {
                    "effect": "NoSchedule",
                    "key": "foo2",
                    "value": "bazz2",
                  },
                ],
              },
            },
            Object {
              "cells": Array [
                Object {
                  "title": <React.Fragment>
                    <React.Fragment>
                      <Title
                        className="pf-u-mb-sm"
                        headingLevel="h4"
                      >
                        Labels
                      </Title>
                      <React.Fragment>
                        <Label
                          color="blue"
                        >
                          foo = bar
                        </Label>
                         
                      </React.Fragment>
                    </React.Fragment>
                    <React.Fragment>
                      <Title
                        className="pf-u-mb-sm pf-u-mt-lg"
                        headingLevel="h4"
                      >
                        Taints
                      </Title>
                      <React.Fragment>
                        <Label
                          className="pf-c-label--break-word"
                          color="blue"
                        >
                          foo1 = bazz1:NoSchedule
                        </Label>
                         
                      </React.Fragment>
                      <React.Fragment>
                        <Label
                          className="pf-c-label--break-word"
                          color="blue"
                        >
                          foo2 = bazz2:NoSchedule
                        </Label>
                         
                      </React.Fragment>
                    </React.Fragment>
                    <React.Fragment>
                      <Title
                        className="pf-u-mb-sm pf-u-mt-lg"
                        headingLevel="h4"
                      >
                        Autoscaling
                      </Title>
                      <Split
                        hasGutter={true}
                      >
                        <SplitItem>
                          <Title
                            className="autoscale__lim"
                            headingLevel="h4"
                          >
                            Min nodes 
                          </Title>
                          1
                        </SplitItem>
                        <SplitItem>
                          <Title
                            className="autoscale__lim"
                            headingLevel="h4"
                          >
                            Max nodes 
                          </Title>
                          2
                        </SplitItem>
                      </Split>
                    </React.Fragment>
                  </React.Fragment>,
                },
              ],
              "fullWidth": true,
              "key": "mp-autoscaling-child",
              "parent": 1,
            },
          ]
        }
        selectVariant="checkbox"
        variant={null}
      >
        <TableHeader />
        <TableBody />
      </Table>
    </CardBody>
  </Card>
</Fragment>
`;

exports[`<MachinePools /> renders with additional machine pools, some with labels and/or taints 1`] = `
<Fragment>
  <UpdateAllMachinePools />
  <Card
    className="ocm-c-machine-pools__card"
  >
    <CardBody
      className="ocm-c-machine-pools__card--body"
    >
      <ButtonWithTooltip
        className="pf-u-mb-lg"
        disableReason={false}
        id="add-machine-pool"
        onClick={[Function]}
        variant="secondary"
      >
        Add machine pool
      </ButtonWithTooltip>
      <Divider />
      <Table
        actionResolver={[Function]}
        actionsMenuAppendTo="inline"
        areActionsDisabled={[Function]}
        aria-label="Machine pools"
        borders={true}
        canCollapseAll={false}
        canSelectAll={true}
        canSortFavorites={true}
        cells={
          Array [
            Object {
              "cellFormatters": Array [
                [Function],
              ],
              "title": "Machine pool",
            },
            Object {
              "title": "Instance type",
            },
            Object {
              "title": "Availability zones",
              "transforms": Array [
                [Function],
              ],
            },
            Object {
              "title": "Node count",
            },
            Object {
              "title": "Autoscaling",
              "transforms": Array [
                [Function],
              ],
            },
          ]
        }
        className=""
        collapseAllAriaLabel=""
        contentId="expanded-content"
        dropdownDirection="down"
        dropdownPosition="right"
        expandId="expandable-toggle"
        gridBreakPoint="grid-md"
        isHeaderSelectDisabled={false}
        isNested={false}
        isStickyHeader={false}
        isTreeTable={false}
        onCollapse={[Function]}
        ouiaSafe={true}
        role="grid"
        rowLabeledBy="simple-node"
        rows={
          Array [
            Object {
              "cells": Array [
                "some-id",
                Object {
                  "title": <React.Fragment>
                    m5.xlarge
                  </React.Fragment>,
                },
                "us-east-1",
                Object {
                  "title": "1",
                },
                "Disabled",
              ],
              "key": "some-id",
              "machinePool": Object {
                "availability_zones": Array [
                  "us-east-1",
                ],
                "desired": 1,
                "id": "some-id",
                "instance_type": "m5.xlarge",
              },
            },
            Object {
              "cells": Array [
                "mp-with-labels-and-taints",
                Object {
                  "title": <React.Fragment>
                    m5.xlarge
                  </React.Fragment>,
                },
                "us-east-1a",
                Object {
                  "title": "1",
                },
                "Disabled",
              ],
              "isOpen": false,
              "key": "mp-with-labels-and-taints",
              "machinePool": Object {
                "availability_zones": Array [
                  "us-east-1a",
                ],
                "href": "/api/clusters_mgmt/v1/clusters/cluster-id/machine_pools/mp-with-labels-and-taints",
                "id": "mp-with-labels-and-taints",
                "instance_type": "m5.xlarge",
                "kind": "MachinePool",
                "labels": Object {
                  "foo": "bar",
                },
                "replicas": 1,
                "taints": Array [
                  Object {
                    "effect": "NoSchedule",
                    "key": "foo1",
                    "value": "bazz1",
                  },
                  Object {
                    "effect": "NoSchedule",
                    "key": "foo2",
                    "value": "bazz2",
                  },
                ],
              },
            },
            Object {
              "cells": Array [
                Object {
                  "title": <React.Fragment>
                    <React.Fragment>
                      <Title
                        className="pf-u-mb-sm"
                        headingLevel="h4"
                      >
                        Labels
                      </Title>
                      <React.Fragment>
                        <Label
                          color="blue"
                        >
                          foo = bar
                        </Label>
                         
                      </React.Fragment>
                    </React.Fragment>
                    <React.Fragment>
                      <Title
                        className="pf-u-mb-sm pf-u-mt-lg"
                        headingLevel="h4"
                      >
                        Taints
                      </Title>
                      <React.Fragment>
                        <Label
                          className="pf-c-label--break-word"
                          color="blue"
                        >
                          foo1 = bazz1:NoSchedule
                        </Label>
                         
                      </React.Fragment>
                      <React.Fragment>
                        <Label
                          className="pf-c-label--break-word"
                          color="blue"
                        >
                          foo2 = bazz2:NoSchedule
                        </Label>
                         
                      </React.Fragment>
                    </React.Fragment>
                  </React.Fragment>,
                },
              ],
              "fullWidth": true,
              "key": "mp-with-labels-and-taints-child",
              "parent": 1,
            },
            Object {
              "cells": Array [
                "mp-with-label",
                Object {
                  "title": <React.Fragment>
                    m5.xlarge
                  </React.Fragment>,
                },
                "us-east-1a",
                Object {
                  "title": "1",
                },
                "Disabled",
              ],
              "isOpen": false,
              "key": "mp-with-label",
              "machinePool": Object {
                "availability_zones": Array [
                  "us-east-1a",
                ],
                "href": "/api/clusters_mgmt/v1/clusters/cluster-id/machine_pools/mp-with-labels",
                "id": "mp-with-label",
                "instance_type": "m5.xlarge",
                "kind": "MachinePool",
                "labels": Object {
                  "foo": "bar",
                },
                "replicas": 1,
              },
            },
            Object {
              "cells": Array [
                Object {
                  "title": <React.Fragment>
                    <React.Fragment>
                      <Title
                        className="pf-u-mb-sm"
                        headingLevel="h4"
                      >
                        Labels
                      </Title>
                      <React.Fragment>
                        <Label
                          color="blue"
                        >
                          foo = bar
                        </Label>
                         
                      </React.Fragment>
                    </React.Fragment>
                  </React.Fragment>,
                },
              ],
              "fullWidth": true,
              "key": "mp-with-label-child",
              "parent": 3,
            },
            Object {
              "cells": Array [
                "mp-with-taints",
                Object {
                  "title": <React.Fragment>
                    m5.xlarge
                  </React.Fragment>,
                },
                "us-east-1a",
                Object {
                  "title": "1",
                },
                "Disabled",
              ],
              "isOpen": false,
              "key": "mp-with-taints",
              "machinePool": Object {
                "availability_zones": Array [
                  "us-east-1a",
                ],
                "href": "/api/clusters_mgmt/v1/clusters/cluster-id/machine_pools/mp-with-taints",
                "id": "mp-with-taints",
                "instance_type": "m5.xlarge",
                "kind": "MachinePool",
                "replicas": 1,
                "taints": Array [
                  Object {
                    "effect": "NoSchedule",
                    "key": "foo1",
                    "value": "bazz1",
                  },
                  Object {
                    "effect": "NoSchedule",
                    "key": "foo2",
                    "value": "bazz2",
                  },
                ],
              },
            },
            Object {
              "cells": Array [
                Object {
                  "title": <React.Fragment>
                    <React.Fragment>
                      <Title
                        className="pf-u-mb-sm"
                        headingLevel="h4"
                      >
                        Taints
                      </Title>
                      <React.Fragment>
                        <Label
                          className="pf-c-label--break-word"
                          color="blue"
                        >
                          foo1 = bazz1:NoSchedule
                        </Label>
                         
                      </React.Fragment>
                      <React.Fragment>
                        <Label
                          className="pf-c-label--break-word"
                          color="blue"
                        >
                          foo2 = bazz2:NoSchedule
                        </Label>
                         
                      </React.Fragment>
                    </React.Fragment>
                  </React.Fragment>,
                },
              ],
              "fullWidth": true,
              "key": "mp-with-taints-child",
              "parent": 5,
            },
            Object {
              "cells": Array [
                "mp-with-no-labels-no-taints",
                Object {
                  "title": <React.Fragment>
                    m5.xlarge
                  </React.Fragment>,
                },
                "us-east-1a",
                Object {
                  "title": "1",
                },
                "Disabled",
              ],
              "key": "mp-with-no-labels-no-taints",
              "machinePool": Object {
                "availability_zones": Array [
                  "us-east-1a",
                ],
                "href": "/api/clusters_mgmt/v1/clusters/cluster-id/machine_pools/mp-with-no-labels-no-taints",
                "id": "mp-with-no-labels-no-taints",
                "instance_type": "m5.xlarge",
                "kind": "MachinePool",
                "replicas": 1,
              },
            },
          ]
        }
        selectVariant="checkbox"
        variant={null}
      >
        <TableHeader />
        <TableBody />
      </Table>
    </CardBody>
  </Card>
</Fragment>
`;

exports[`<MachinePools /> renders with the default machine pool 1`] = `
<Fragment>
  <UpdateAllMachinePools />
  <Card
    className="ocm-c-machine-pools__card"
  >
    <CardBody
      className="ocm-c-machine-pools__card--body"
    >
      <ButtonWithTooltip
        className="pf-u-mb-lg"
        disableReason={false}
        id="add-machine-pool"
        onClick={[Function]}
        variant="secondary"
      >
        Add machine pool
      </ButtonWithTooltip>
      <Divider />
      <Table
        actionResolver={[Function]}
        actionsMenuAppendTo="inline"
        areActionsDisabled={[Function]}
        aria-label="Machine pools"
        borders={true}
        canCollapseAll={false}
        canSelectAll={true}
        canSortFavorites={true}
        cells={
          Array [
            Object {
              "cellFormatters": Array [
                [Function],
              ],
              "title": "Machine pool",
            },
            Object {
              "title": "Instance type",
            },
            Object {
              "title": "Availability zones",
              "transforms": Array [
                [Function],
              ],
            },
            Object {
              "title": "Node count",
            },
            Object {
              "title": "Autoscaling",
              "transforms": Array [
                [Function],
              ],
            },
          ]
        }
        className=""
        collapseAllAriaLabel=""
        contentId="expanded-content"
        dropdownDirection="down"
        dropdownPosition="right"
        expandId="expandable-toggle"
        gridBreakPoint="grid-md"
        isHeaderSelectDisabled={false}
        isNested={false}
        isStickyHeader={false}
        isTreeTable={false}
        onCollapse={[Function]}
        ouiaSafe={true}
        role="grid"
        rowLabeledBy="simple-node"
        rows={
          Array [
            Object {
              "cells": Array [
                "some-id",
                Object {
                  "title": <React.Fragment>
                    m5.xlarge
                  </React.Fragment>,
                },
                "us-east-1",
                Object {
                  "title": "1",
                },
                "Disabled",
              ],
              "key": "some-id",
              "machinePool": Object {
                "availability_zones": Array [
                  "us-east-1",
                ],
                "desired": 1,
                "id": "some-id",
                "instance_type": "m5.xlarge",
              },
            },
          ]
        }
        selectVariant="checkbox"
        variant={null}
      >
        <TableHeader />
        <TableBody />
      </Table>
    </CardBody>
  </Card>
</Fragment>
`;

exports[`<MachinePools /> renders with the default machine pool when it has labels 1`] = `
<Fragment>
  <UpdateAllMachinePools />
  <Card
    className="ocm-c-machine-pools__card"
  >
    <CardBody
      className="ocm-c-machine-pools__card--body"
    >
      <ButtonWithTooltip
        className="pf-u-mb-lg"
        disableReason={false}
        id="add-machine-pool"
        onClick={[Function]}
        variant="secondary"
      >
        Add machine pool
      </ButtonWithTooltip>
      <Divider />
      <Table
        actionResolver={[Function]}
        actionsMenuAppendTo="inline"
        areActionsDisabled={[Function]}
        aria-label="Machine pools"
        borders={true}
        canCollapseAll={false}
        canSelectAll={true}
        canSortFavorites={true}
        cells={
          Array [
            Object {
              "cellFormatters": Array [
                [Function],
              ],
              "title": "Machine pool",
            },
            Object {
              "title": "Instance type",
            },
            Object {
              "title": "Availability zones",
              "transforms": Array [
                [Function],
              ],
            },
            Object {
              "title": "Node count",
            },
            Object {
              "title": "Autoscaling",
              "transforms": Array [
                [Function],
              ],
            },
          ]
        }
        className=""
        collapseAllAriaLabel=""
        contentId="expanded-content"
        dropdownDirection="down"
        dropdownPosition="right"
        expandId="expandable-toggle"
        gridBreakPoint="grid-md"
        isHeaderSelectDisabled={false}
        isNested={false}
        isStickyHeader={false}
        isTreeTable={false}
        onCollapse={[Function]}
        ouiaSafe={true}
        role="grid"
        rowLabeledBy="simple-node"
        rows={
          Array [
            Object {
              "cells": Array [
                "some-id",
                Object {
                  "title": <React.Fragment>
                    m5.xlarge
                  </React.Fragment>,
                },
                "us-east-1",
                Object {
                  "title": "1",
                },
                "Disabled",
              ],
              "isOpen": false,
              "key": "some-id",
              "machinePool": Object {
                "availability_zones": Array [
                  "us-east-1",
                ],
                "desired": 1,
                "id": "some-id",
                "instance_type": "m5.xlarge",
                "labels": Object {
                  "foo": "bar",
                  "hello": "world",
                },
              },
            },
            Object {
              "cells": Array [
                Object {
                  "title": <React.Fragment>
                    <React.Fragment>
                      <Title
                        className="pf-u-mb-sm"
                        headingLevel="h4"
                      >
                        Labels
                      </Title>
                      <React.Fragment>
                        <Label
                          color="blue"
                        >
                          foo = bar
                        </Label>
                         
                      </React.Fragment>
                      <React.Fragment>
                        <Label
                          color="blue"
                        >
                          hello = world
                        </Label>
                         
                      </React.Fragment>
                    </React.Fragment>
                  </React.Fragment>,
                },
              ],
              "fullWidth": true,
              "key": "some-id-child",
              "parent": 0,
            },
          ]
        }
        selectVariant="checkbox"
        variant={null}
      >
        <TableHeader />
        <TableBody />
      </Table>
    </CardBody>
  </Card>
</Fragment>
`;

exports[`<MachinePools /> should render skeleton while fetching machine pools 1`] = `
<Fragment>
  <Card>
    <CardTitle>
      <Skeleton
        size="lg"
      />
    </CardTitle>
    <CardBody>
      <Skeleton
        size="lg"
      />
    </CardBody>
    <CardFooter>
      <Skeleton
        size="lg"
      />
    </CardFooter>
  </Card>
</Fragment>
`;
